# demo_bufferoverflow_error

./: .envrc  .gitignore  README.md  default.nix  flake.nix  litestar-dep.nix  litestar.nix  msgspec.nix  polyfactory.nix  pyproject.toml
demo_error/: main.py
demo_error/controllers/: http.py
litestar-dep/: README.md  pyproject.toml
litestar-dep/litestar/: app.py  router.py
litestar-dep/litestar/_asgi/: asgi_router.py
litestar-dep/litestar/_asgi/routing_trie/: traversal.py
litestar-dep/litestar/exceptions/responses/: __init__.py
litestar-dep/litestar/middleware/_internal/exceptions/: middleware.py
litestar-dep/litestar/response/: base.py
litestar-dep/litestar/serialization/: msgspec_hooks.py
