[tool.poetry]
name = "demo-error"
version = "0.1.0"
description = ""
authors = ["Bruno Claudino <bruarrais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
httptools = "^0.6.1"
litestar = "^2.9.1"
uvloop = "^0.19.0"

[tool.poetry.scripts]
demo-error = 'demo_error.main:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
